# ILD_MultiAgentsLab

./: .env.example  .gitignore  README.md  pyproject.toml  test_new_html.py
.github/: copilot-instructions.md
configs/agents/semantic_graphing/: agent.yaml
data/examples/: ild_case_multimodal.txt
docs/architecture/: semantic_graphing_agent.md
docs/schemas/: modality_graph_schemas.md
scripts/run/: run_semantic_graph_agent.py
src/: __init__.py
src/agents/semantic_graphing/: __init__.py  agent.py  clinical_proposition_extractor.py  clinical_proposition_validator.py  document_classifier.py  frame_triage.py  graph_unit_extractor.py  local_graph_builder.py  primary_frame_selector.py  schema_registry.py  subgraph_builder.py
src/llm/: base.py  chatanywhere_client.py  deepseek_client.py  factory.py  structured.py
src/prompts/: __init__.py
src/prompts/semantic_graphing/: clinical_proposition_extraction.md  document_classification.md  frame_triage.md  graph_unit_extraction.md  primary_frame_selection.md  subgraph_construction.md
src/reporting/: __init__.py  html_report.py
src/schemas/: __init__.py
src/schemas/graph/: __init__.py  semantic_graph.py
src/schemas/semantic_graphing/: __init__.py  clinical_proposition.py  document.py  frame.py  graph_unit.py  local_graph.py  modality_schema.py  primary_frame.py  proposition_validation.py
src/utils/: config.py  json_utils.py
tests/: __init__.py  test_clinical_proposition_extraction.py  test_primary_frame_report.py  test_primary_frame_selection.py  test_semantic_graph_runtime.py
(+7 files in other folders)
