[project]
name = "ild-multiagents-lab"
version = "0.1.0"
description = "Research code for LLM-based multi-agent ILD diagnostic reasoning."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "Jinja2>=3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

